Initial commit with Render deployment prep

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/webmethods-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/webmethods-icon.svg" /> <!-- CHANGED LINE -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webMethods Scraper Dashboard</title>
     <meta name="description" content="A full-stack web scraping application to aggregate webMethods-related content from across the internet.">
